# genie-common

./: .gitignore  README.md  pyproject.toml
genie_common/: consts.py  typing.py
genie_common/clients/: __init__.py  base_web_client.py
genie_common/clients/google/: __init__.py  google_translate_client.py
genie_common/clients/openai/: __init__.py  openai_client.py  openai_consts.py
genie_common/clients/openai/openai_collectors/: __init__.py  base_openai_collector.py  chat_completions_collector.py  embeddings_collector.py  image_generator_collector.py  (+1 more)
genie_common/encoders/: __init__.py  encoder_interface.py  gzip_json_encoder.py
genie_common/google/: __init__.py  google_drive_adapter.py
genie_common/models/: __init__.py
genie_common/models/google/: __init__.py  google_drive_upload_metadata.py  translation_response.py
genie_common/models/openai/: __init__.py  dalle_model.py  embeddings_model.py  image_size.py
genie_common/openai/: __init__.py  base_openai_collector.py  openai_client.py  openai_consts.py
genie_common/openai/openai_collectors/: __init__.py  chat_completions_collector.py  embeddings_collector.py  image_generator_collector.py  images_variator_collector.py
genie_common/tools/: __init__.py  aio_pool_executor.py  chunks_generator.py  email_sender.py  logs.py  sync_pool_executor.py
genie_common/utils/: __init__.py  datetime_utils.py  dict_utils.py  error_utils.py  file_utils.py  general_utils.py  google_utils.py  image_utils.py  iterable_utils.py  os_utils.py  random_utils.py  regex_utils.py  string_utils.py  web_utils.py
