[tool.poetry]
name = "genie-common"
version = "0.1.0"
description = ""
authors = ["nir.godin <nir.godin@planckresolution.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
aiohttp = ">=3.6.3,<3.9.0"
asyncio-pool = "^0.6.0"
opencv-python-headless = ">=4.7,<5.0"
tqdm = ">=4.65,<5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
